<resources>

    <!-- player card -->
    <string name="app_name">NBAManager</string>
    <string name="game_title">篮球经理</string>
    <string name="hint_account">账户</string>
    <string name="hint_password">密码</string>
    <string name="login">登陆</string>
    <string name="reg">注册</string>
    <string name="action_settings">设置</string>
    <string name="marketsal">市场价</string>
    <string name="signsal">签约价</string>
    <string name="fg">投篮</string>
    <string name="ft">罚球</string>
    <string name="reb">篮板</string>
    <string name="ast">助攻</string>
    <string name="stl">抢断</string>
    <string name="blk">盖帽</string>
    <string name="tur">失误</string>
    <string name="pf">犯规</string>
    <string name="pts">得分</string>
    <string name="ev">效率</string>

    <!-- team info -->
    <string name="team_name">队名</string>
    <string name="evalue">球迷数</string>
    <string name="money">资金</string>

    <!-- toast -->
    <string name="get_teaminfo_error">获取球队信息异常</string>
    <string name="get_teamplayers_error">获取球员信息异常</string>
    <string name="login_error">登陆异常</string>

    <string name="team_players">球员</string>
    <string name="markets">市场</string>

    <string name="capacity">容量</string>
    <string name="ticket_price">球票价格</string>
    <string name="attendance">上座率</string>
    <string name="today_in">今日收入</string>
    <string name="arena_upgrade">升级</string>
    <string name="arena_close">取消</string>
</resources>
