<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/arena_name"
        style="@style/font_title"
        android:layout_marginTop="30dp"
        android:textSize="40sp" />

    <TableLayout
        android:id="@+id/info_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:stretchColumns="0,1">

        <TableRow>

            <TextView
                style="@style/font_title"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/capacity" />

            <TextView
                android:id="@+id/arena_capacity"
                style="@style/font_value"
                android:layout_marginLeft="10dp"
                android:gravity="left" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/font_title"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/ticket_price" />

            <TextView
                android:id="@+id/ticket_price"
                style="@style/font_value"
                android:layout_marginLeft="10dp"
                android:gravity="left" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/font_title"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/attendance" />

            <TextView
                android:id="@+id/arena_attendance"
                style="@style/font_value"
                android:layout_marginLeft="10dp"
                android:gravity="left" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/font_title"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/today_in" />

            <TextView
                android:id="@+id/arena_today_in"
                style="@style/font_value"
                android:layout_marginLeft="10dp"
                android:gravity="left" />

        </TableRow>

        <TableRow android:layout_marginTop="30dp">

            <com.zhstar.demo.nbamanager.view.button.ButtonRectangle
                android:id="@+id/arena_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arena_upgrade" />

            <com.zhstar.demo.nbamanager.view.button.ButtonRectangle
                android:id="@+id/arena_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arena_close" />

        </TableRow>
    </TableLayout>
</LinearLayout>
