<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gametitle"
        android:textSize="45dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:paddingTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/gametitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/font_lable"
            android:text="ACCOUNT:"
            android:id="@+id/namelable"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginLeft="20dp"
            android:textSize="12sp"
            android:gravity="center"
            android:hint="@string/hint_account"
            android:layout_below="@id/gametitle"
            android:id="@+id/account_edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_below="@+id/namelable"
            style="@style/font_lable"
            android:text="PASSWORD:"
            android:id="@+id/passwordlable"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_password"
            android:layout_below="@id/account_edit"
            android:id="@+id/password_edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="save login info"
        android:id="@+id/save_check"
        android:layout_column="0" />

    <LinearLayout
        android:id="@+id/row3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/save_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_btn"
            android:text="login"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/reg_btn"
            android:text="reg"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
